fix pipfile and remove sql injection (oops)

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ kubernetes = "*"
 orjson = "*"
 Flask = "*"
 Flask-Cors = "*"
-psycopg2 = "*"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 black = "*"
